# seiskit-apps

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: IssuesWorkflow.yml  greetings.yml
applications/asce/: asceApp.py  asceFunctions.py
applications/eqprocess/: eqProcessFunctions.py  processorApp.py  record.py
applications/seisEvents/: SeisEvents.py  SeisEventsFunctions.py  colorbars.py  drawer.py  example.py  ids.py  test.py
applications/seisEvents/data/: desa_unpd_2021_13_inquiry_international_migration_country.xlsx  mainExtensions.js  tectonic_plates.json
applications/seisscale/: seisscaleApp.py  seisscaleFunctions.py  similaritymeasures.py
applications/seisscale/data/: exampleSpectrum.csv
applications/tbec/: tbecApp.py  tbecFunctions.py
components/: navbar.py
test/: test_SeisEventsFunctions.py
