[project]
name = "SEISKIT-APPS"
version = "1.0.0"
authors = [
  { name="Doğukan Karataş",   email="aaa@gmail.com" },
  { name="Kamer Özdemir",     email="aaa@gmail.com" },
  { name="Ahmet Anıl Dindar", email="aaa@gmail.com" },
  { name="Muhammed Sural",    email="muhammedsural@gmail.com" },
]
description = "Get quick and easy access to web applications created by the earthquake and structural engineering community.With no barriers to access, you can now explore and utilize these tools at your convenience, making your work more efficient and productive."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "dash==2.16.1",
  "dash_bootstrap_components==1.3.1" ,
  "dash_iconify==0.1.2" ,
  "dash_leaflet==0.1.23" ,
  "dash_mantine_components==0.12.1" ,
  "numpy==1.24.3" ,
  "pandas==1.5.0" ,
  "plotly==5.12.0" ,
  "Requests==2.32.3" ,
  "scipy==1.14.0" ,
  "similaritymeasures==0.6.0"
]
keywords = ["Response-Spectrums", "Seismic-Events", "Signal-Process", "Structural-Dynamics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]


[project.urls]
"Homepage" = "https://github.com/SeisKit/seiskit-apps"
"Bug Tracker" = "https://github.com/SeisKit/seiskit-apps/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

